Reconsidered how to fix Serial Monitor autoscroll only makes bottom line partially visible #972

--- a/arduino-ide-extension/src/browser/style/monitor.css
+++ b/arduino-ide-extension/src/browser/style/monitor.css
@@ -14,6 +14,10 @@
     font-family: monospace
 }
 
+.serial-monitor-messages pre {
+    margin: 0px;
+}
+
 .serial-monitor .head {
     display: flex;
     padding: 5px;
